--- a/thesis/01-introduction/00-Abstract.tex
+++ b/thesis/01-introduction/00-Abstract.tex
@@ -2,10 +2,10 @@
 \addcontentsline{toc}{chapter}{Abstract}
 \setheader{Abstract}
 
-Integer factorization is a computational problem of fundamental importance in cybersecurity and secure communications, as its difficulty form the basis of modern public-key cryptography. While Shor's algorithm can solve this problem efficiently on a universal quantum computer, near-term devices require alternative approaches. The Adiabatic Factorization Algorithm and its digitized counterparts offer a promising NISQ-era pathway but suffer from high-order many-body interactions that are difficult to implement. In this work, we propose a modified QAOA-based factorization protocol that simplifies the interacting Hamiltonian to include only two-body terms, significantly reducing its experimental complexity. Numerical simulations show that this method achieves comparable or higher fidelities than the standard protocol, while requiring fewer quantum resources and converging more rapidly for problem instances up to eight qubits. We analyze the characteristic fidelity behavior introduced by the Hamiltonian modification. Additionally, we report on experiments with alternative cost-function definitions that frequently yielded improved performance.
+Integer factorization is a computational problem of fundamental importance in cybersecurity and secure communications, as its difficulty form the basis of modern public-key cryptography. While Shor's algorithm can solve this problem efficiently on a universal quantum computer, near-term devices require alternative approaches. The Adiabatic Factorization Algorithm and its digitized counterparts offer a promising NISQ-era pathway but suffer from high-order many-body interactions that are difficult to implement. In this work, we propose a modified QAOA-based factorization protocol that simplifies the interacting Hamiltonian to include only two-body terms, significantly reducing its experimental complexity. Numerical simulations show that this method achieves comparable or higher fidelities than the standard protocol, while requiring fewer quantum resources and converging more rapidly for problem instances up to eight qubits. We analyze the characteristic fidelity behavior introduced by the Hamiltonian modification. Additionally, we report on simulations with alternative cost-function definitions that frequently yielded improved performance.
 
 \chapter*{Resumen}
 \addcontentsline{toc}{chapter}{Resumen}
 \setheader{Resumen}
 
-\noindent La factorización de números enteros es un problema computacional de gran relevancia en los campos de la ciberseguridad y las comunicaciones seguras, ya que su dificultad sirve como base para la criptografía de clave pública moderna. Mientras que el algoritmo de Shor resuelta este problema de forma eficiente en un ordenador cuántico universal, los dispositivos a corto plazo requieren de enfoques diferentes. El Algoritmo de Factorización Adiabática y sus versiones digitalizadas ofrecen un prometedor camino a seguir en la era NISQ (por sus siglas en inglés \textit{Noisy Intermediate-Scale Quantum}), pero sufren de interacciones de muchos cuerpos que son difíciles de implementar. En este trabajo, proponemos un protocolo de factorización basado en QAOA modificado que simplifica el Hamiltoniano de interacción para incluir únicamente interacciones de dos cuerpos, reduciendo significativamente su complejidad experimental. Simulaciones numéricas demuestran que este método logra fidelidades comparablas o mayores a las obtenidas con el protocolo estándar, a la vez que requiere un menor número de recursos cuánticos y convergiendo más rápidamente para problemas de hasta ocho qubits. Analizamos el comportamiento característico en la evolución de la fidelidad introducido por la modificación en el Hamiltoniano. Además, utilizamos definiciones alternativas en la función de coste que normalmente conllevan una mejora de rendimiento.
+\noindent La factorización de números enteros es un problema computacional de gran relevancia en los campos de la ciberseguridad y las comunicaciones seguras, ya que su dificultad sirve como base para la criptografía de clave pública moderna. Mientras que el algoritmo de Shor resuelta este problema de forma eficiente en un ordenador cuántico universal, los dispositivos a corto plazo requieren de enfoques diferentes. El Algoritmo de Factorización Adiabática y sus versiones digitalizadas ofrecen un prometedor camino a seguir en la era NISQ (por sus siglas en inglés \textit{Noisy Intermediate-Scale Quantum}), pero sufren de interacciones de muchos cuerpos que son difíciles de implementar. En este trabajo, proponemos un protocolo de factorización basado en QAOA modificado que simplifica el Hamiltoniano de interacción para incluir únicamente interacciones de dos cuerpos, reduciendo significativamente su complejidad experimental. Simulaciones numéricas demuestran que este método logra fidelidades comparablas o mayores a las obtenidas con el protocolo estándar, a la vez que requiere un menor número de recursos cuánticos y convergiendo más rápidamente para problemas de hasta ocho qubits. Analizamos el comportamiento característico en la evolución de la fidelidad introducido por la modificación en el Hamiltoniano. Además, utilizamos definiciones alternativas en la función de coste que normalmente conllevaron mejoras de rendimiento.
