--- a/thesis/05-discussion/discussion.tex
+++ b/thesis/05-discussion/discussion.tex
@@ -5,7 +5,9 @@ The numerical results allow us to assess how the proposed linearized QAOA protoc
 
 \subsection*{Standard versus linear\_quadratic protocols}
 
-Since both the \texttt{standard} and \texttt{linear\_quadratic} protocols are optimized with respect to the same cost function, $\langle \hat{H}_\mathrm{QP} \rangle$, their performance can be directly compared. The data clearly indicate that the \texttt{linear\_quadratic} protocol reaches relevant solutions with acceptable fidelity at shallower circuit depths. Moreover, when performance is measured against the number of two-qubit gates --- a more meaningful indicator of quantum resource requirements --- the linear protocol consistently requires fewer resources to achieve comparable or superior fidelities. This indicates that the linearization strategy focuses the optimization on the parts of the problem Hamiltonian that matter most, allowing the algorithm to reach good solutions with less computational effort.
+Since both the \texttt{standard} and \texttt{linear\_quadratic} protocols are optimized with respect to the same cost function, $\langle \hat{H}_\mathrm{QP} \rangle$, their performance can be directly compared. In most cases, the data indicate that the \texttt{linear\_quadratic} protocol reaches relevant solutions with acceptable fidelity at shallower circuit depths. Moreover, when performance is measured against the number of two-qubit gates --- a more meaningful indicator of quantum resource requirements --- the linear protocol consistently requires fewer resources to achieve comparable or superior fidelities.
+
+However, in some problem instances like $N=143$ in Fig.~\ref{fig:fidelity_layers} and Fig.~\ref{fig:fidelity_gates}, it may initially appear that the algorithm performs better under the \texttt{standard} protocol than under \texttt{linear\_quadratic}. In terms of fidelity alone, this is technically correct, but the fidelities in this regime are so low that the difference is not practically significant. In contrast, the cost plots in Fig.~\ref{fig:cost_layers_all} reveal a different picture: the \texttt{linear\_quadratic} protocol consistently achieves lower cost values. This behavior indicates that it is progressing toward a better population transfer to the target state, which should ultimately translate into higher fidelity at later stages.
 
 \subsection*{Impact of the cost function}
 
@@ -16,7 +18,7 @@ The choice of cost function proves to be a decisive factor. Between the two line
 One of the most distinctive features of the linear protocols is the occurrence of abrupt fidelity jumps as the number of QAOA layers increases. This contrasts with the smoother fidelity evolution observed for the standard protocol, a behavior consistently seen across the problem sizes studied (see Fig.~\ref{fig:fidelity_layers_all}). To understand this behavior, we analyzed the spectra of the problem Hamiltonians $\hat{H}_\mathrm{LP}$ and $\hat{H}_\mathrm{QP}$, shown in Fig.~\ref{fig:spectrums}.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.99\textwidth]{05-discussion/figs/energy_spectrums.pdf}
+    \includegraphics[width=1\textwidth]{05-discussion/figs/energy_spectrums.pdf}
     \caption{Energy spectrums for (a) $N=25$, (b) $N=77$, and (c) $N=143$. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. The eigenstate corresponding to the solution ($\widetilde{E}=0$) is marked as a red star.}
     \label{fig:spectrums}
 \end{figure}
@@ -46,8 +48,6 @@ The results confirm that $\hat{H}_\mathrm{LP}$ consistently exhibits larger RMS 
     \caption{Root-mean-square (RMS) distance of the energy spectrum from the target state, used as a measure of how widely the eigenvalues are distributed for each Hamiltonian and problem size.}
     \label{table:rms}
 \end{table}
-
-%For example, in the problem instance $N=143$ in Fig.~\ref{fig:fidelity_layers} and Fig.~\ref{fig:fidelity_gates}, it may initially appear that the algorithm performs better under the \texttt{standard} protocol than under \texttt{linear\_quadratic}. In terms of fidelity alone, this is technically correct, but the fidelities in this regime are so low that the difference is not practically significant. In contrast, the cost plots in Fig.~\ref{fig:cost_layers_all} reveal a different picture: the \texttt{linear\_quadratic} protocol consistently achieves lower cost values. This behavior indicates that it is progressing toward a better population transfer to the target state, which should ultimately translate into higher fidelity at later stages.
 
 \section{Future prospects}
 
