Fixed cut off references

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -128,13 +128,10 @@
 %%%%
 % References
 %%%%
-\chapter*{Bibliography}
-\addcontentsline{toc}{chapter}{Bibliography}
-\setheader{Bibliography}
-
 
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
+\newpage
 
 \end{document}
 
