Add populations and spectrums data files

--- a/qaoa_factorization/notebooks/paper.ipynb
+++ b/qaoa_factorization/notebooks/paper.ipynb
@@ -190,31 +190,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb03c968",
-   "metadata": {},
-   "source": [
-    "### Plotting data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1e508c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ns = sorted(experiment_results['N'].unique())\n",
-    "protocols = ['standard', 'linear_quadratic', 'linear_abs']\n",
-    "\n",
-    "for N in Ns:\n",
-    "    for protocol in protocols:\n",
-    "        df = experiment_results[(experiment_results['N']==N) & (experiment_results['setup']==protocol)]\n",
-    "        df = df[['layers', 'fidelity', 'cost', 'num_2qub_gates']]\n",
-    "        df.to_csv(f'plotting_data/N={N}_protocol={protocol}.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c273adb5",
    "metadata": {},
    "source": [
@@ -447,6 +422,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001a53b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ns = sorted(experiment_results['N'].unique())\n",
+    "protocols = ['standard', 'linear_quadratic', 'linear_abs']\n",
+    "\n",
+    "for N in Ns:\n",
+    "    for protocol in protocols:\n",
+    "        df = experiment_results[(experiment_results['N']==N) & (experiment_results['setup']==protocol)]\n",
+    "        df = df[['layers', 'fidelity', 'cost', 'num_2qub_gates']]\n",
+    "        df.to_csv(f'plotting_data/N={N}_protocol={protocol}.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "572ec596",
    "metadata": {},
@@ -456,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "id": "9fcad23f",
    "metadata": {},
    "outputs": [
@@ -472,6 +464,8 @@
     }
    ],
    "source": [
+    "data = {}\n",
+    "\n",
     "Ns = [119, 143]\n",
     "\n",
     "ncols = 3\n",
@@ -479,6 +473,9 @@
     "\n",
     "fig, axs = plt.subplots(nrows, ncols, figsize=(14, 2.8*nrows), sharey=True)\n",
     "fig.subplots_adjust(hspace=0.6, wspace=0.05)\n",
+    "\n",
+    "for i, N in enumerate(Ns):\n",
+    "    data[N] = {}\n",
     "\n",
     "for i, N in enumerate(Ns):\n",
     "    for j, protocol in enumerate(['standard','linear_quadratic','linear_abs']):\n",
@@ -507,6 +504,8 @@
     "        # Add the \"Others\" bar\n",
     "        x_plot = x_top + ['Others']\n",
     "        y_plot = list(y_top) + [probs[idx_rest].sum()]\n",
+    "\n",
+    "        data[N][protocol] = {'basis_state': x_plot, 'probs': y_plot}\n",
     "        \n",
     "        # Colors: dark if solution, light otherwise, gray for \"Others\"\n",
     "        bar_colors = [\n",
@@ -536,11 +535,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1602bea5",
+   "execution_count": 110,
+   "id": "d57ec4d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ns = [119, 143]\n",
+    "protocols = ['standard', 'linear_quadratic', 'linear_abs']\n",
+    "\n",
+    "df = pd.DataFrame(columns=['N', 'protocol', 'basis_states', 'populations'])\n",
+    "\n",
+    "i = 0\n",
+    "for N in Ns:\n",
+    "    for protocol in protocols:\n",
+    "        df.loc[i] = [N, protocol, data[N][protocol]['basis_state'], data[N][protocol]['probs']]\n",
+    "        i += 1\n",
+    "\n",
+    "df = df.sort_values(['N', 'protocol'])\n",
+    "\n",
+    "df.to_json('plotting_data/populations.json', orient='records')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -560,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "id": "fa98e97a",
    "metadata": {},
    "outputs": [
@@ -576,10 +590,15 @@
     }
    ],
    "source": [
+    "data = {}\n",
+    "\n",
     "Ns = [119, 143]\n",
     "\n",
     "fig, axs = plt.subplots(len(Ns), 2, figsize=(13.5,2.9*len(Ns)), sharey=True)\n",
     "fig.subplots_adjust(wspace=0.05, hspace=0.15)\n",
+    "\n",
+    "for N in Ns:\n",
+    "    data[N] = {}\n",
     "\n",
     "for i, N in enumerate(Ns):\n",
     "    for j, setup in enumerate(['standard', 'linear_quadratic']):\n",
@@ -595,6 +614,8 @@
     "\n",
     "        sol = list(normalized_Ep).index(0)\n",
     "        ax.scatter(sol, 0, s=64, color='red', marker='*')\n",
+    "\n",
+    "        data[N][setup] = {'basis_state': range(len(Ep)), 'normalized_Ep': normalized_Ep}\n",
     "\n",
     "        if i==0:\n",
     "            ax.set_title(title)\n",
@@ -614,6 +635,29 @@
     "            fontsize=16, va='center', ha='right', fontfamily='Times New Roman')\n",
     "\n",
     "# plt.savefig(f\"plots/paper/energy_spectrums.pdf\", format='pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "e8e3da1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ns = [119, 143]\n",
+    "protocols = ['standard', 'linear_quadratic']\n",
+    "\n",
+    "df = pd.DataFrame(columns=['N', 'protocol', 'basis_states', 'normalized_Ep'])\n",
+    "\n",
+    "i = 0\n",
+    "for N in Ns:\n",
+    "    for protocol in protocols:\n",
+    "        df.loc[i] = [N, protocol, data[N][protocol]['basis_state'], data[N][protocol]['normalized_Ep']]\n",
+    "        i += 1\n",
+    "\n",
+    "df = df.sort_values(['N', 'protocol'])\n",
+    "\n",
+    "df.to_json('plotting_data/spectrums.json', orient='records')"
    ]
   },
   {
