--- a/qaoa_factorization/notebooks/paper.ipynb
+++ b/qaoa_factorization/notebooks/paper.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "fa98e97a",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "1c510711",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5d88ae96",
    "metadata": {},
    "outputs": [
@@ -807,13 +807,233 @@
        "3          75  0.292969  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d6b96f",
+   "metadata": {},
+   "source": [
+    "### Shannon Entropy & Confidence\n",
+    "\n",
+    "$$H = -\\sum_{i=1}^{2^n} p_i \\log(p_i)$$\n",
+    "\n",
+    "$$C = 1 - \\frac{H}{H_\\mathrm{max}}$$\n",
+    "\n",
+    "$$H_\\mathrm{max} = - 2^n \\bigg( \\frac{1}{2^n} \\bigg) \\log \\bigg( \\frac{1}{2^n} \\bigg) = n$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed80a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_entropy(probs):\n",
+    "    h = -sum([p*np.log2(p) for p in probs])\n",
+    "    return h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "59d9d385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = experiment_results[experiment_results['optimizer']=='BFGS'].reset_index(drop=True)\n",
+    "\n",
+    "df['entropy'] = df['populations'].apply(compute_entropy)\n",
+    "df['entropy_max'] = df['num_qubits']\n",
+    "df['confidence'] = 1 - df['entropy'] / df['entropy_max']\n",
+    "df = df[['N','setup','layers','fidelity','entropy','entropy_max','confidence']]\n",
+    "df = df.rename(columns={'setup': 'protocol'})\n",
+    "\n",
+    "df.to_csv(f'plotting_data/entropy.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9e9cea94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>protocol</th>\n",
+       "      <th>layers</th>\n",
+       "      <th>fidelity</th>\n",
+       "      <th>entropy</th>\n",
+       "      <th>entropy_max</th>\n",
+       "      <th>confidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1500</th>\n",
+       "      <td>115</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.005694</td>\n",
+       "      <td>7.740497</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.032438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2866</th>\n",
+       "      <td>143</td>\n",
+       "      <td>linear_abs</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0.956121</td>\n",
+       "      <td>0.358316</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.955211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>687</th>\n",
+       "      <td>115</td>\n",
+       "      <td>linear_abs</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.001780</td>\n",
+       "      <td>1.449948</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.818756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2638</th>\n",
+       "      <td>87</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0.052245</td>\n",
+       "      <td>3.888530</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.444496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2117</th>\n",
+       "      <td>51</td>\n",
+       "      <td>linear_abs</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.004941</td>\n",
+       "      <td>1.107332</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.815445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1251</th>\n",
+       "      <td>77</td>\n",
+       "      <td>linear_quadratic</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.832341</td>\n",
+       "      <td>1.006183</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.832303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>143</td>\n",
+       "      <td>linear_quadratic</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.001097</td>\n",
+       "      <td>3.709642</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.536295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1862</th>\n",
+       "      <td>119</td>\n",
+       "      <td>linear_abs</td>\n",
+       "      <td>143</td>\n",
+       "      <td>0.010413</td>\n",
+       "      <td>0.968250</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.878969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1222</th>\n",
+       "      <td>77</td>\n",
+       "      <td>linear_quadratic</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.334535</td>\n",
+       "      <td>2.735788</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.544035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1927</th>\n",
+       "      <td>119</td>\n",
+       "      <td>linear_abs</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0.753313</td>\n",
+       "      <td>1.282116</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.839736</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        N          protocol  layers  fidelity   entropy  entropy_max  \\\n",
+       "1500  115          standard       1  0.005694  7.740497            8   \n",
+       "2866  143        linear_abs     136  0.956121  0.358316            8   \n",
+       "687   115        linear_abs      58  0.001780  1.449948            8   \n",
+       "2638   87          standard      63  0.052245  3.888530            7   \n",
+       "2117   51        linear_abs      17  0.004941  1.107332            6   \n",
+       "1251   77  linear_quadratic      37  0.832341  1.006183            6   \n",
+       "331   143  linear_quadratic      12  0.001097  3.709642            8   \n",
+       "1862  119        linear_abs     143  0.010413  0.968250            8   \n",
+       "1222   77  linear_quadratic       8  0.334535  2.735788            6   \n",
+       "1927  119        linear_abs     208  0.753313  1.282116            8   \n",
+       "\n",
+       "      confidence  \n",
+       "1500    0.032438  \n",
+       "2866    0.955211  \n",
+       "687     0.818756  \n",
+       "2638    0.444496  \n",
+       "2117    0.815445  \n",
+       "1251    0.832303  \n",
+       "331     0.536295  \n",
+       "1862    0.878969  \n",
+       "1222    0.544035  \n",
+       "1927    0.839736  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(10)"
    ]
   }
  ],
@@ -833,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
