Add individual entropy csv files

--- a/qaoa_factorization/notebooks/paper.ipynb
+++ b/qaoa_factorization/notebooks/paper.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7ed80a2b",
    "metadata": {},
    "outputs": [],
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "59d9d385",
    "metadata": {},
    "outputs": [],
@@ -857,7 +857,12 @@
     "df = df[['N','setup','layers','fidelity','entropy','entropy_max','confidence']]\n",
     "df = df.rename(columns={'setup': 'protocol'})\n",
     "\n",
-    "df.to_csv(f'plotting_data/entropy.csv', index=False)"
+    "df.to_csv(f'plotting_data/entropy_all.csv', index=False)\n",
+    "\n",
+    "for N in sorted(df['N'].unique()):\n",
+    "    for protocol in sorted(df['protocol'].unique()):\n",
+    "        df_i = df[(df['N']==N) & (df['protocol']==protocol)]\n",
+    "        df_i.to_csv(f'plotting_data/entropy_N={N}_protocol={protocol}.csv', index=False)"
    ]
   },
   {
